--- a/latex/thesis_template/thesis.tex
+++ b/latex/thesis_template/thesis.tex
@@ -8,6 +8,13 @@
 \usepackage[MScThesis]{EPFLreport} \usepackage{xspace}
 \usepackage{array}
 \usepackage{rotating}
+\usepackage{booktabs}
+\usepackage{array}
+\newcommand{\PreserveBackslash}[1]{\let\temp=\\#1\let\\=\temp}
+\newcolumntype{C}[1]{>{\PreserveBackslash\centering}p{#1}}
+\newcolumntype{R}[1]{>{\PreserveBackslash\raggedleft}p{#1}}
+\newcolumntype{L}[1]{>{\PreserveBackslash\raggedright}p{#1}}
+\usepackage{arydshln}
 
 \title{A Control Plane in Time and Space for Locality-Preserving Blockchains}
 \author{Arnaud Pannatier} \supervisor{Cristina Basescu} \adviser{Prof. Bryan
@@ -1120,6 +1127,9 @@ There is no simple solution to this problem, but that fact has no consequence
 on the system so it seems to be an acceptable weakness.
 
 \section{Introducing the Space/Time metrics}
+One of the principal reason to split the system based on locality is because of most regular transactions between people are locals, therefore one wants to ensure that in case of a global partition, the locals transactions can still be processed flawlessly. Following this hypothesis, one can try to use this structure to update the system. Based on that, there should be more interaction in local regions. Most interactions can be processed locally. But some need to be propagated up the hierarchy up to the global system. 
+
+Different levels can have different time as well, as local regions should be capable of validating transaction fast, maybe its possible to pull the transaction to regional and global levels using more time. In that way, if a client want to buy a coffee from the local merchant, it could have the local validation in second, but if I wants to do international payment this could be slowed down as they are supposed to happened less often and require more verification.
 
 Pings give a space/time insight of the evolution of the system.  This idea can
 be leveraged to create the Space/Time version of the control plane. In fact
@@ -1130,9 +1140,7 @@ system.
 
 What type of information can be inferred from this additional method ? First
 nodes can track the evolution through time and space of other nodes in the
-system. And react to them. For example, if a new node manages to ping an
-existing node from inside one region, the already existing nodes could trigger
-registration of these nodes. On the contrary, if one node starts to get away
+system. And react to them. For example, if one node starts to get away
 from the rest of the region, then other nodes will notice and can decide to
 kick this node out of their region (after consensus with the existing nodes).
 Modifications (e.g. nodes movement, churn), can be detected directly with the
@@ -1154,21 +1162,18 @@ moves fast, then it generates bigger bubbles, it goes to the biggest region to
 be resolved.  Structurally this view of the system is not really different from
 the one that we described before, but philosophically this view goes much
 deeper as it taking in account the interactions of the nodes in a space/time
-matter.
+matter. 
 
 In terms of Nyle components, the locality component has an additional view and
 can influence first the region component. Registration is still global, epochs
 managed the rhythm for the registration. Instead of only having a locality
 measure at the beginning of the epoch, this view allows to have measures of the
 system dynamically at all time. 
-
-This can be used to adapt the region assignment during the system. At first the
-regions will be kept the same with fixed borders but the rules for region
-assignment can be stated. 
+This can be used to adapt the system.
 
 \subsubsection{Rules for Region Assignment based on the Space/Time Metric}
-Recall that nodes participate to all region that is bigger than its cluster. If
-nodes in one region detect that another is moving apart, they do not expect it
+Recall that nodes are included in regions from the size of their cluster to the size of the system.
+If nodes in one region detect that another is moving apart, they do not expect it
 to participate in this region anymore and they propagate the information in the
 directly upper region. This is done recursively till the node is again included
 in the more global region.  In the opposite, if a region detect that one node
@@ -1181,10 +1186,7 @@ biggest region, and the node is excluded from all the regions.
 \subsubsection{Transformation of regions}
 This change in region assignment actually have an effect on the form of the
 region, the same rules developed in \ref{Locarno} can be applied to adapt the
-regions on the fly. 
-
-\paragraph{Protocol}
-If node $A$ is moving and leaves a region, and another node $B$ detects that
+regions on the fly. If node $A$ is moving and leaves a region, and another node $B$ detects that
 while communicating with $A$, it will take that in account meaning it will
 store the last ping and adopt its own view on the system. If a major change is
 detected, for example that $A$ leaves the cluster of $B$ leading to the
@@ -1196,6 +1198,8 @@ still in the region it can be integrated in another region. If $A$ moved too
 fast, it might have left its cluster as well, so the information would be
 transferred to the next bigger region. Eventually the biggest region, which
 covers the whole system would be reached. 
+
+
 
 \subsubsection{Rules for Membership Component based on the Space/Time metric}
 The Space/Time Metric can be leveraged to serve as a Membership Components.
@@ -1222,6 +1226,23 @@ Regions are created in the genesis of the system by the algorithm for region
 creation. The underlying system is replicated in all the deployed regions. And
 nodes start working in the system. Events are detected with the dynamic
 Space/Time Metric. 
+
+\begin{sidewaystable}
+\centering
+\begin{tabular}{m{0.15\textwidth}m{0.3\textwidth}*{2}{>{\arraybackslash}m{0.2\textwidth}}}
+\toprule
+Event                 & Effect                                                                                 & Detection                                                & Communication                                                 \\ \midrule
+Node leave a region   & Node should not be assigned to this region anymor. Might trigger region transformation & Ping of other nodes in the region                        & None needed                                                   \\ \hdashline[0.5pt/5pt]
+Node enter a region   & Node should be assigned to this region anymore. Might trigger region transformation    & Ping of other nodes in the region                        & None needed                                                   \\ \hdashline[0.5pt/5pt]
+Region Shrink         & Might exclude other nodes                                                              & Node leaving detected by one node of the region          & Round of communication between node in the region             \\ \hdashline[0.5pt/5pt]
+Region Growth         & Might add other nodes                                                                  & Node entering detected by one node of the region         & Round of communication between node in the region             \\ \hdashline[0.5pt/5pt]
+Node leave the system & Leave all regions                                                                      & Subcase of Node leave a region                           & None needed                                                   \\ \hdashline[0.5pt/5pt]
+Node join the system  & Join a particular region                                                               & Ping all the nodes in the system                         & Election of a committee of checkers. Consensus on Endorsement \\ \hdashline[0.5pt/5pt]
+Global Partition      & Redrawing the system in both side of the partition                                     & Ping of individual nodes, generate region transformation & Same as before                                                \\ \bottomrule
+\end{tabular}
+\caption{Rules of Space/Time Protocol}
+\label{tab:rules-space-graphs}
+\end{sidewaystable}
 
 \subsection{Threat model}
 Malicious nodes might forge ping to let other nodes thinking that a good node have moved. 
