Regroup images together and output in PDF.

--- a/utils/Graphs/DrawMap.ipynb
+++ b/utils/Graphs/DrawMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {
     "scrolled": false
    },
@@ -40,11 +40,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>node_0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>40.309273</td>\n",
        "      <td>254.230121</td>\n",
-       "      <td>map[node_1:true node_2:true node_3:true]</td>\n",
        "      <td>map[]</td>\n",
+       "      <td>map[node_2:true]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -52,26 +52,26 @@
        "      <td>0</td>\n",
        "      <td>246.532589</td>\n",
        "      <td>87.920694</td>\n",
+       "      <td>map[]</td>\n",
        "      <td>map[node_2:true]</td>\n",
-       "      <td>map[node_0:true node_2:true node_3:true]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>node_2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>148.630526</td>\n",
        "      <td>134.847319</td>\n",
-       "      <td>map[node_1:true]</td>\n",
        "      <td>map[node_0:true node_1:true node_3:true]</td>\n",
+       "      <td>map[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>node_3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>195.477892</td>\n",
        "      <td>236.617005</td>\n",
-       "      <td>map[node_1:true node_2:true]</td>\n",
-       "      <td>map[node_0:true]</td>\n",
+       "      <td>map[]</td>\n",
+       "      <td>map[node_2:true]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -79,25 +79,19 @@
       ],
       "text/plain": [
        "     Name  Level           X           Y  \\\n",
-       "0  node_0      2   40.309273  254.230121   \n",
+       "0  node_0      1   40.309273  254.230121   \n",
        "1  node_1      0  246.532589   87.920694   \n",
-       "2  node_2      0  148.630526  134.847319   \n",
-       "3  node_3      1  195.477892  236.617005   \n",
+       "2  node_2      2  148.630526  134.847319   \n",
+       "3  node_3      0  195.477892  236.617005   \n",
        "\n",
-       "                                    cluster  \\\n",
-       "0  map[node_1:true node_2:true node_3:true]   \n",
-       "1                          map[node_2:true]   \n",
-       "2                          map[node_1:true]   \n",
-       "3              map[node_1:true node_2:true]   \n",
-       "\n",
-       "                                      bunch  \n",
-       "0                                     map[]  \n",
-       "1  map[node_0:true node_2:true node_3:true]  \n",
-       "2  map[node_0:true node_1:true node_3:true]  \n",
-       "3                          map[node_0:true]  "
+       "                                    cluster             bunch  \n",
+       "0                                     map[]  map[node_2:true]  \n",
+       "1                                     map[]  map[node_2:true]  \n",
+       "2  map[node_0:true node_1:true node_3:true]             map[]  \n",
+       "3                                     map[]  map[node_2:true]  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,9 +106,10 @@
     "import IPython.display\n",
     "\n",
     "epoch = 1\n",
+    "epochs = [i for i in range(1,10)]\n",
     "\n",
     "folder = \"Locarno/\"\n",
-    "folder = \"Random/\"\n",
+    "#folder = \"Random/\"\n",
     "\n",
     "Df = pd.read_csv(\"../../membershipchainservice/Data/\"+folder+\"gentree-node_0-epoch\"+str(epoch))\n",
     "Df"
@@ -636,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {
     "scrolled": false
    },
@@ -675,13 +670,14 @@
    "source": [
     "folders = [\"Random\", \"Locarno\"]\n",
     "difference_per_folder = []\n",
+    "svgs_per_folder = []\n",
     "for folder in folders:\n",
     "    SVGs = []\n",
     "    Df = []\n",
     "    old_Df = []\n",
     "    differences = []\n",
     "    print(folder, \" : \")\n",
-    "    for epoch in range(1,10):  \n",
+    "    for epoch in epochs:  \n",
     "        old_Df = Df\n",
     "        Df = pd.read_csv(\"../../membershipchainservice/Data/\"+folder+\"/gentree-node_0-epoch\"+str(epoch))\n",
     "        transform_Df(Df)\n",
@@ -692,12 +688,13 @@
     "        differences.append(diff)\n",
     "        print(diff)\n",
     "    print(\"\\n\")\n",
-    "    difference_per_folder.append(differences)"
+    "    difference_per_folder.append(differences)\n",
+    "    svgs_per_folder.append(SVGs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -724,8 +721,6 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "epochs = [i for i in range(1,10)]\n",
-    "\n",
     "plt.plot(epochs, difference_per_folder[0])\n",
     "plt.plot(epochs, difference_per_folder[1])\n",
     "plt.legend(folders)\n",
@@ -735,6 +730,27 @@
     "\n",
     "plt.savefig(\"differences.eps\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from svgutils.compose import *\n",
+    "from svglib.svglib import svg2rlg\n",
+    "from reportlab.graphics import renderPDF\n",
+    "\n",
+    "for folder in folders:\n",
+    "    nb_per_line = 3\n",
+    "\n",
+    "    paths = [folder+\"/epoch\"+str(epoch)+\"_map.svg\" for epoch in epochs]\n",
+    "    panels = [Panel(SVG(p), Text(str(i), 25, 20, size=12, weight='bold')).move(side*(i%nb_per_line), side*int(i/nb_per_line)) for i, p in enumerate(paths)]\n",
+    "\n",
+    "    Figure(side*nb_per_line, side*(int(len(panels)/nb_per_line)), *panels).save(folder+\"/fig_final_compose.svg\")\n",
+    "    drawing = svg2rlg(folder+\"/fig_final_compose.svg\")\n",
+    "    renderPDF.drawToFile(drawing, folder+\"/final.pdf\")\n"
    ]
   },
   {
